[package]
authors = ["Kazurin Nanako"]
edition = "2018"
name = "process-inject"
version = "0.1.0"

[dependencies]
win32-error = "0.9.0"
winapi = {version = "0.3.9", features = [
  "minwindef",
  "winnt",
  "winbase",
  "handleapi",
  "processthreadsapi",
  "memoryapi",
  "tlhelp32",
  "libloaderapi",
]}
wstr = "0.2.0"
