[package]
authors = ["Kazurin Nanako <71819243+Kazurin-775@users.noreply.github.com>"]
edition = "2018"
name = "process-inject"
version = "0.1.0"

[dependencies]
cfg-if = "1.0.0"
thiserror = "1.0.21"
win32-error = { git = "https://github.com/Rust-WinGUI/win32-error.git", rev = "3ed867a" }
winapi = { version = "0.3.9", features = [
  "minwindef",
  "winnt",
  "winbase",
  "handleapi",
  "processthreadsapi",
  "memoryapi",
  "tlhelp32",
  "libloaderapi",
  "synchapi",
] }
wstr = "0.2.0"
